# ducklake-python

./: .gitignore  README.md  pyproject.toml
ducklake_python/: __init__.py  ducklake_client.py
examples/: example.ipynb
examples/tmp/data/main/t/: ducklake-019a97b0-8b72-725a-9ee3-8b45e1b2afd1.parquet  ducklake-019a97b2-d09b-75bf-b2b7-98e322f16f24-delete.parquet  ducklake-019a97b5-15ce-7964-a0e1-dcaf67e4c05a-delete.parquet
tests/: test_read.py
