[project]
name = "ducklake_python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyarrow", "sqlalchemy", "psycopg2-binary"]

[tool.setuptools.package-dir]
ducklake_python = "ducklake_python"

[dependency-groups]
dev = [
    "duckdb>=1.4.2",
    "pytest>=9.0.1",
]
examples = [
    "ipykernel>=7.1.0",
]
